--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Ticket Booking Platform</title>
+    <title>Movie Ticket Booking Platform 2</title>
     <style>
         /* Add CSS for animation if needed */
         @keyframes posterAnimation {
